--- a/cms/home/templates/cms_home/blocks/three_column_text_block.html
+++ b/cms/home/templates/cms_home/blocks/three_column_text_block.html
@@ -1,4 +1,4 @@
-<div class="three-column-text-block">
+<div class="column-text-block__three">
     <div class="container block">
         {% if value.title %}
         <div class="row text-center">
