--- a/civic_europe/templates/formtools/wizard/wizard_form.html
+++ b/civic_europe/templates/formtools/wizard/wizard_form.html
@@ -5,7 +5,9 @@
 
 {% block content %}
 <div class="wizard-page">
-    <div class="container-narrow wizard-warning-text text-center">{% trans "Please note: Your application will NOT be saved until you hit the “Submit” button at the very end of the application form. Please save an offline version of your answers to avoid data lost" %}</div>
+    {% if wizard.steps.current == wizard.steps.first %}
+      <div class="container-narrow wizard-warning-text text-center">{% trans "Please note: Your application will NOT be saved until you hit the “Submit” button at the very end of the application form. Please save an offline version of your answers to avoid data lost" %}</div>
+    {% endif %}
     <form class="wizard custom-form container-narrow" method="post" enctype="multipart/form-data" novalidate>
         <h1>{{ view.title }} | {{ form.section_name }}</h1>
         {% if form.section_description_header  %}
@@ -48,7 +50,7 @@
         <div class="row">
             <div class="col-md-12">
 
-              {% if wizard.steps.prev and wizard.steps.next or wizard.steps.next %}
+              {% if wizard.steps.next %}
               <div class="wizard-warning-text">{% trans "Please note: Your application will NOT be saved until you hit the “Submit” button at the very end of the application form. Please save an offline version of your answers to avoid data lost" %}</div>
               {% endif %}
 
