assets/basics: reduce width of sligned images fixes #309

--- a/civic_europe/assets/scss/core/_basics.scss
+++ b/civic_europe/assets/scss/core/_basics.scss
@@ -155,11 +155,13 @@ a,
     }
 
     &.left {
+        width: 50%;
         float: left;
         margin-right: $spacer;
     }
 
     &.right {
+        width: 50%;
         float: right;
         margin-left: $spacer;
     }
