--- a/cms/home/templates/cms_home/blocks/carousel_block.html
+++ b/cms/home/templates/cms_home/blocks/carousel_block.html
@@ -1,6 +1,6 @@
 {% load home_tags %}
 
-{% load_ideas value.year value.topic value.ordering value.status as ideas %}
+{% load_ideas value.year value.field_of_action value.ordering value.status as ideas %}
 <div class="block">
     <div class="container text-center">
         <div class="row">
