account/signup: reduce padding and add margin on checkbox fixes #316

--- a/civic_europe/templates/account/signup.html
+++ b/civic_europe/templates/account/signup.html
@@ -63,7 +63,7 @@
         {{ form.password2.errors }}
     </div>
 
-    <div class="form-check">
+    <div class="form-check pl-0 mb-3">
         <label class="col-form-label" for="{{ form.terms_of_use.id_for_label }}">{{ form.terms_of_use }} {{ form.terms_of_use.label | safe }}</label>
         {{ form.terms_of_use.errors }}
     </div>
