--- a/civic_europe/assets/scss/components/_blocks.scss
+++ b/civic_europe/assets/scss/components/_blocks.scss
@@ -229,13 +229,17 @@
     text-align: center;
 
     @extend .col-sm-6;
-    @extend .offset-3;
+    @extend .offset-sm-3;
 }
 
 .block-col-2 {
+    margin-bottom: 1.25*$spacer;
+
     @extend .col-sm-6;
 }
 
 .block-col-3 {
+    margin-bottom: 1.25*$spacer;
+
     @extend .col-sm-4;
 }
