styling/idea form: use normal font weight for choice options and add some space after helptexts - fixes #338

--- a/civic_europe/assets/scss/components/_custom_form.scss
+++ b/civic_europe/assets/scss/components/_custom_form.scss
@@ -79,6 +79,14 @@
         color: $brand-danger;
         font-size: $font-size-md;
     }
+
+    .help-block {
+        margin-bottom: $spacer;
+    }
+
+    .form-check-span {
+        font-weight: 400;
+    }
 }
 
 .accordion-toggle {
