assets/ideas: add margin for mobile fixes #346

--- a/civic_europe/assets/scss/components/_ideas.scss
+++ b/civic_europe/assets/scss/components/_ideas.scss
@@ -414,6 +414,7 @@
         font-size: $font-size-md;
 
         @media screen and (max-width: $screen-xs-max) {
+            margin-bottom: $spacer;
             font-size: $font-size-base;
         }
 
