assest/ideas: incrasing width of budget element on small screens and sm responsive fixes, fixes #351

--- a/apps/ideas/templates/civic_europe_ideas/includes/idea_detail_tab_idea.html
+++ b/apps/ideas/templates/civic_europe_ideas/includes/idea_detail_tab_idea.html
@@ -14,7 +14,7 @@
     {% endfor %}
     <div class="row ideadetail-funding">
         {% for field in budget_list %}
-        <div class="col-lg-4 col-sm-4 col-xs-4 well">
+        <div class="col-lg-4 col-sm-4 well">
             <h3>€ {{ field.1 }},-</h3>
             <p>{{ field.0 }}</p>
         </div>
