--- a/civic_europe/templates/formtools/wizard/wizard_form.html
+++ b/civic_europe/templates/formtools/wizard/wizard_form.html
@@ -10,7 +10,7 @@
           <div class="mb-3">{% trans "<b>Please note:</b> Your application will NOT be saved until you hit the “Submit” button at the very end of the application form. Please <b>save an offline</b> version of your answers to avoid lost data." %}</div>
         {% endif %}
         <h1>{{ view.title }} | {{ form.section_name }}</h1>
-        {% if form.section_description_header  %}s
+        {% if form.section_description_header  %}
         <span class="font-weight-bold">{{ form.section_description_header }}</span>
         {% endif %}
         {% if form.section_description  %}
