cms/styling: make structured page sticky instead of fixed - fixes #401

--- a/civic_europe/assets/scss/components/_home.scss
+++ b/civic_europe/assets/scss/components/_home.scss
@@ -37,8 +37,9 @@
 }
 
 .structured-page-side-nav {
-    position: fixed;
+    position: sticky;
     margin-top: 4*$spacer;
+    top: 4*$spacer + $navbar-height;
 
     li {
         font-size: $font-size-md;
