--- a/cms/home/templates/cms_home/simple_page.html
+++ b/cms/home/templates/cms_home/simple_page.html
@@ -7,7 +7,11 @@
         <div class="row">
             <div class="col-md-8 offset-md-2">
                 <h1>{{ page.title }}</h1>
-                {% include_block page.body %}
+                {% for block in page.body %}
+                <div class="clearfix">
+                	{% include_block block %}
+                </div>
+                {% endfor %}
             </div>
         </div>
     </div>
