--- a/cms/home/templates/cms_home/structured_text_page.html
+++ b/cms/home/templates/cms_home/structured_text_page.html
@@ -17,9 +17,15 @@
             <div class="col-md-7 structured-page-sections-container" data-spy="scroll" data-target="#structured-page-side-nav" data-offset="70">
                 {% for block in page.body %}
                 <span class="structured-page-section__anchor" id="section{{ forloop.counter }}"></span>
-                <div class="structured-page-section clearfix">
-                  {% include_block block %}
-                </div>
+                {% if block.block_type == 'section' %}
+                    <div class="structured-page-section clearfix rich-text">
+                      {% include_block block %}
+                    </div>
+                {% else %}
+                    <div class="structured-page-section clearfix">
+                      {% include_block block %}
+                    </div>
+                {% endif %}
                 {% endfor %}
             </div>
         </div>
