--- a/civic_europe/assets/scss/components/_herounit.scss
+++ b/civic_europe/assets/scss/components/_herounit.scss
@@ -5,7 +5,7 @@
     background-color: $gray-lighter;
 
     &:after {
-        content: '\A';
+        content: "\A";
         left: 0;
         min-height: 100%;
         position: absolute;
@@ -27,6 +27,7 @@
 
     @media only screen and (max-width: $screen-xs) {
         min-height: 235px;
+
         //background-size: 100% 60%;
     }
 }
@@ -59,7 +60,6 @@
         padding-left: 33%;
     }
 
-
     .button {
         margin-top: 0.75*$spacer;
     }
@@ -87,7 +87,7 @@
 
     &:after {
         background: rgba(0, 0, 0, 0.5);
-        content: '\A';
+        content: "\A";
         left: 0;
         margin: 0;
         position: absolute;
