--- a/civic_europe/assets/scss/components/_hover_image.scss
+++ b/civic_europe/assets/scss/components/_hover_image.scss
@@ -11,7 +11,7 @@
         height: 100%;
         background-position: center;
         background-size: cover;
-        transition: all .5s;
+        transition: all 0.5s;
     }
 
     &:hover .hover-child-img,
