--- a/civic_europe/assets/scss/components/_ideas.scss
+++ b/civic_europe/assets/scss/components/_ideas.scss
@@ -68,7 +68,7 @@
     overflow-wrap: break-word;
 
     .idealist-image:after {
-        content: '';
+        content: "";
         background: linear-gradient(to top, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0));
         width: 100%;
         height: 100%;
@@ -105,7 +105,7 @@
 .idealist-category {
     font-size: 12px;
     font-weight: bold;
-    letter-spacing: .8px;
+    letter-spacing: 0.8px;
     text-transform: uppercase;
     color: $brand-primary;
 }
@@ -117,7 +117,6 @@
         margin-top: 1.25*$spacer;
     }
 }
-
 
 // ------------------------ Idea Detail ------------------------
 // ------------------------ Idea Detail Header ------------------------
@@ -142,7 +141,6 @@
         }
     }
 
-
     // .ideadetailheader-content {
     //     height: 100%;
     //     margin-left: 0.5 * $spacer;
@@ -164,6 +162,7 @@
 
     .ideadetail-title {
         color: #fff;
+
         // position: absolute;
         // left: 0;
         bottom: $spacer;
