--- a/civic_europe/assets/scss/components/navbar.scss
+++ b/civic_europe/assets/scss/components/navbar.scss
@@ -1,4 +1,3 @@
-
 .navbar--default {
     color: $gray-dark;
     background-color: $white;
@@ -23,20 +22,20 @@
         text-align: left;
 
         @media screen and (min-width: $screen-md) {
-            padding: 1.5rem 1rem 1rem 1rem !important;
+            padding: 1.5rem 1rem 1rem !important;
         }
     }
 }
 
 .navbar--default .nav-link.is-active:after {
     display: block;
-    content: '';
+    content: "";
     border-bottom: solid $navbar-underline-height $brand-primary;
 }
 
 .navbar--default .nav-link.not-active:after {
     display: block;
-    content: '';
+    content: "";
     border-bottom: solid $navbar-underline-height $brand-primary;
     transform: scaleX(0);
     transition: transform 250ms ease-in-out;
