--- a/civic_europe/assets/scss/core/_fonts.scss
+++ b/civic_europe/assets/scss/core/_fonts.scss
@@ -1,59 +1,59 @@
 @font-face {
-    font-family: 'Lato';
-    src: url('../fonts/Lato-Regular.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/Lato-Regular.woff2') format('woff2'), /* Modern Browsers */
-        url('../fonts/Lato-Regular.woff') format('woff'), /* Modern Browsers */
-        url('../fonts/Lato-Regular.ttf') format('truetype');
+    font-family: "Lato";
+    src: url("../fonts/Lato-Regular.eot"); /* IE9 Compat Modes */
+    src: url("../fonts/Lato-Regular.woff2") format("woff2"),
+        url("../fonts/Lato-Regular.woff") format("woff"),
+        url("../fonts/Lato-Regular.ttf") format("truetype");
     font-style: normal;
     font-weight: normal;
 }
 
 @font-face {
-    font-family: 'Lato';
-    src: url('../fonts/Lato-Italic.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/Lato-Italic.woff2') format('woff2'), /* Modern Browsers */
-        url('../fonts/Lato-Italic.woff') format('woff'), /* Modern Browsers */
-        url('../fonts/Lato-Italic.ttf') format('truetype');
+    font-family: "Lato";
+    src: url("../fonts/Lato-Italic.eot"); /* IE9 Compat Modes */
+    src: url("../fonts/Lato-Italic.woff2") format("woff2"),
+        url("../fonts/Lato-Italic.woff") format("woff"),
+        url("../fonts/Lato-Italic.ttf") format("truetype");
     font-style: italic;
     font-weight: normal;
 }
 
 @font-face {
-    font-family: 'Lato';
-    src: url('../fonts/Lato-Bold.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/Lato-Bold.woff2') format('woff2'), /* Modern Browsers */
-        url('../fonts/Lato-Bold.woff') format('woff'), /* Modern Browsers */
-        url('../fonts/Lato-Bold.ttf') format('truetype');
+    font-family: "Lato";
+    src: url("../fonts/Lato-Bold.eot"); /* IE9 Compat Modes */
+    src: url("../fonts/Lato-Bold.woff2") format("woff2"),
+        url("../fonts/Lato-Bold.woff") format("woff"),
+        url("../fonts/Lato-Bold.ttf") format("truetype");
     font-style: normal;
     font-weight: 600;
 }
 
 @font-face {
-    font-family: 'Lato';
-    src: url('../fonts/Lato-BoldItalic.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/Lato-BoldItalic.woff2') format('woff2'), /* Modern Browsers */
-        url('../fonts/Lato-BoldItalic.woff') format('woff'), /* Modern Browsers */
-        url('../fonts/Lato-BoldItalic.ttf') format('truetype');
+    font-family: "Lato";
+    src: url("../fonts/Lato-BoldItalic.eot"); /* IE9 Compat Modes */
+    src: url("../fonts/Lato-BoldItalic.woff2") format("woff2"),
+        url("../fonts/Lato-BoldItalic.woff") format("woff"),
+        url("../fonts/Lato-BoldItalic.ttf") format("truetype");
     font-style: italic;
     font-weight: 600;
 }
 
 @font-face {
-    font-family: 'Lato';
-    src: url('../fonts/Lato-Black.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/Lato-Black.woff2') format('woff2'), /* Modern Browsers */
-        url('../fonts/Lato-Black.woff') format('woff'), /* Modern Browsers */
-        url('../fonts/Lato-Black.ttf') format('truetype');
+    font-family: "Lato";
+    src: url("../fonts/Lato-Black.eot"); /* IE9 Compat Modes */
+    src: url("../fonts/Lato-Black.woff2") format("woff2"),
+        url("../fonts/Lato-Black.woff") format("woff"),
+        url("../fonts/Lato-Black.ttf") format("truetype");
     font-style: normal;
     font-weight: bold;
 }
 
 @font-face {
-    font-family: 'Lato';
-    src: url('../fonts/Lato-BlackItalic.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/Lato-BlackItalic.woff2') format('woff2'), /* Modern Browsers */
-        url('../fonts/Lato-BlackItalic.woff') format('woff'), /* Modern Browsers */
-        url('../fonts/Lato-BlackItalic.ttf') format('truetype');
+    font-family: "Lato";
+    src: url("../fonts/Lato-BlackItalic.eot"); /* IE9 Compat Modes */
+    src: url("../fonts/Lato-BlackItalic.woff2") format("woff2"),
+        url("../fonts/Lato-BlackItalic.woff") format("woff"),
+        url("../fonts/Lato-BlackItalic.ttf") format("truetype");
     font-style: italic;
     font-weight: bold;
 }
