--- a/civic_europe/assets/scss/core/variables.scss
+++ b/civic_europe/assets/scss/core/variables.scss
@@ -23,7 +23,6 @@ $ce-instagram: #e4405f;
 $ce-github: #24292e;
 $ce-border--dark: 1px solid $ce-light-gray-shadow;
 $ce-border--light: 1px solid $ce-light-gray;
-
 $ce-brand-red: #cc445c; //logo colour #d55169
 $ce-brand-green: #01797f;
 $ce-brand-green-lighter: #c4dcdd;
@@ -36,7 +35,7 @@ $demibold: 600;
 
 // Color system
 
-$white:    #fff !default;
+$white: #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
@@ -46,19 +45,17 @@ $gray-600: #6c757d !default;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
-$black:    #000 !default;
-
-$blue:    #007bff !default;
-$indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
-$pink:    #e83e8c !default;
-$red:     #dc3545 !default;
-$orange:  #fd7e14 !default;
-$yellow:  #ffc107 !default;
-$green:   #28a745 !default;
-$teal:    #20c997 !default;
-$cyan:    #17a2b8 !default;
-
+$black: #000 !default;
+$blue: #007bff !default;
+$indigo: #6610f2 !default;
+$purple: #6f42c1 !default;
+$pink: #e83e8c !default;
+$red: #dc3545 !default;
+$orange: #fd7e14 !default;
+$yellow: #ffc107 !default;
+$green: #28a745 !default;
+$teal: #20c997 !default;
+$cyan: #17a2b8 !default;
 $colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 $colors: map-merge(
@@ -76,35 +73,33 @@ $colors: map-merge(
         "white":      $white,
         "gray":       $gray-600,
         "gray-dark":  $gray-800
-    ), $colors
+    ),
+    $colors
 );
 
 //CI custom colours
-$brand-primary:         #01797f !default;
-$brand-secondary:       #d57480 !default;
-$brand-success:         #73be46 !default; //was: #5cb85c
-$brand-info:            #5bc0de !default;
-$brand-warning:         #f0ad4e !default;
-$brand-danger:          #db3918 !default; // was: #db3918
-$brand-magenta:         #cd148c !default;
-$gray-lighter:          $gray-100 !default;
-$gray-light:            $gray-200 !default;
-$gray:                  $gray-500 !default;
-$gray-dark:             $gray-800 !default;
-$gray-darker:           $gray-900 !default;
-$black:                 #000 !default;
-
-$text-color:            $gray-dark !default;
-
-$primary:       $brand-primary !default;
-$secondary:     $brand-secondary !default;
-$success:       $brand-success !default;
-$info:          $brand-info !default;
-$warning:       $brand-warning !default;
-$danger:        $brand-danger !default;
-$light:         $gray-100 !default;
-$dark:          $gray-800 !default;
-
+$brand-primary: #01797f !default;
+$brand-secondary: #d57480 !default;
+$brand-success: #73be46 !default; //was: #5cb85c
+$brand-info: #5bc0de !default;
+$brand-warning: #f0ad4e !default;
+$brand-danger: #db3918 !default; // was: #db3918
+$brand-magenta: #cd148c !default;
+$gray-lighter: $gray-100 !default;
+$gray-light: $gray-200 !default;
+$gray: $gray-500 !default;
+$gray-dark: $gray-800 !default;
+$gray-darker: $gray-900 !default;
+$black: #000 !default;
+$text-color: $gray-dark !default;
+$primary: $brand-primary !default;
+$secondary: $brand-secondary !default;
+$success: $brand-success !default;
+$info: $brand-info !default;
+$warning: $brand-warning !default;
+$danger: $brand-danger !default;
+$light: $gray-100 !default;
+$dark: $gray-800 !default;
 $theme-colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 $theme-colors: map-merge(
@@ -117,35 +112,32 @@ $theme-colors: map-merge(
         "danger":     $danger,
         "light":      $light,
         "dark":       $dark
-    ), $theme-colors
+    ),
+    $theme-colors
 );
 
 //CI custom Buttons
-$btn-ce-secondary-color:         $gray-dark !default;
-$btn-ce-secondary-bg:            $ce-brand-red !default;
-$btn-ce-secondary-border:        darken($btn-ce-secondary-bg, 5%) !default;
-
-$btn-ce-github-color:            #fff !default;
-$btn-ce-github-bg:               $ce-github;
-$btn-ce-github-border:           darken($ce-github, 5%) !default;
-
-$btn-ce-facebook-color:          #fff !default;
-$btn-ce-facebook-bg:             $ce-facebook;
-$btn-ce-facebook-border:         darken($ce-facebook, 5%) !default;
-
-$btn-ce-google-color:            #fff !default;
-$btn-ce-google-bg:               $ce-google;
-$btn-ce-google-border:           darken($ce-google, 5%) !default;
-
-$btn-default-bg:                 $ce-light-gray !default;
-$btn-default-border:             darken($ce-light-gray, 5%) !default;
-$btn-primary-bg:                 $brand-primary !default;
+$btn-ce-secondary-color: $gray-dark !default;
+$btn-ce-secondary-bg: $ce-brand-red !default;
+$btn-ce-secondary-border: darken($btn-ce-secondary-bg, 5%) !default;
+$btn-ce-github-color: #fff !default;
+$btn-ce-github-bg: $ce-github;
+$btn-ce-github-border: darken($ce-github, 5%) !default;
+$btn-ce-facebook-color: #fff !default;
+$btn-ce-facebook-bg: $ce-facebook;
+$btn-ce-facebook-border: darken($ce-facebook, 5%) !default;
+$btn-ce-google-color: #fff !default;
+$btn-ce-google-bg: $ce-google;
+$btn-ce-google-border: darken($ce-google, 5%) !default;
+$btn-default-bg: $ce-light-gray !default;
+$btn-default-border: darken($ce-light-gray, 5%) !default;
+$btn-primary-bg: $brand-primary !default;
 
 // Options
 //
 // Quickly modify global styling by enabling or disabling optional features.
 
-$enable-caret:                   false !default;
+$enable-caret: false !default;
 
 // Spacing
 //
@@ -159,32 +151,33 @@ $spacers: () !default;
 $spacers: map-merge(
     (
         0: 0,
-        1: ($spacer * .25),
-        2: ($spacer * .5),
+        1: ($spacer * 0.25),
+        2: ($spacer * 0.5),
         3: $spacer,
         4: ($spacer * 1.5),
         5: ($spacer * 3)
-    ), $spacers
+    ),
+    $spacers
 );
-
 $padding: $spacer !default;
 
 // Body
 //
 // Settings for the `<body>` element.
 
-$body-bg:                   $white !default;
-$body-color:                $gray-900 !default;
+$body-bg: $white !default;
+$body-color: $gray-900 !default;
 
 // Links
 //
 // Style anchor elements.
 
-$link-color:                              theme-color("primary") !default;
-$link-decoration:                         none !default;
-$link-hover-color:                        darken($link-color, 15%) !default;
-$link-hover-decoration:                   underline !default;
-$dropdown-link-color:                     $gray-dark;
+$link-color: theme-color("primary") !default;
+$link-decoration: none !default;
+$link-hover-color: darken($link-color, 15%) !default;
+$link-hover-decoration: underline !default;
+$dropdown-link-color: $gray-dark;
+
 // Darken percentage for links with `.text-*` class (e.g. `.text-success`)
 $emphasized-link-hover-darken-percentage: 15% !default;
 
@@ -192,8 +185,7 @@ $emphasized-link-hover-darken-percentage: 15% !default;
 //
 // Style p element.
 
-$paragraph-margin-bottom:   1rem !default;
-
+$paragraph-margin-bottom: 1rem !default;
 
 // Grid breakpoints
 //
@@ -235,96 +227,84 @@ $container-max-widths: (
 
 @include _assert-ascending($container-max-widths, "$container-max-widths");
 
-
 // Grid columns
 //
 // Set the number of columns and specify the width of the gutters.
 
-$grid-columns:                12 !default;
-$grid-gutter-width:           30px !default;
-$grid-row-columns:            6 !default;
+$grid-columns: 12 !default;
+$grid-gutter-width: 30px !default;
+$grid-row-columns: 6 !default;
 
 // Components
 //
 // Define common padding and border radius sizes and more.
 
-$line-height-lg:              1.5 !default;
-$line-height-sm:              1.5 !default;
-
-$border-width:                1px !default;
-$border-color:                $gray-300 !default;
-
-$border-radius:               .25rem !default;
-$border-radius-lg:            .3rem !default;
-$border-radius-sm:            .2rem !default;
-
-$rounded-pill:                50rem !default;
-
-$box-shadow-sm:               0 .125rem .25rem rgba($black, .075) !default;
-$box-shadow:                  0 .5rem 1rem rgba($black, .15) !default;
-$box-shadow-lg:               0 1rem 3rem rgba($black, .175) !default;
-
-$component-active-color:      $white !default;
-$component-active-bg:         theme-color("primary") !default;
+$line-height-lg: 1.5 !default;
+$line-height-sm: 1.5 !default;
+$border-width: 1px !default;
+$border-color: $gray-300 !default;
+$border-radius: 0.25rem !default;
+$border-radius-lg: 0.3rem !default;
+$border-radius-sm: 0.2rem !default;
+$rounded-pill: 50rem !default;
+$box-shadow-sm: 0 0.125rem 0.25rem rgba($black, 0.075) !default;
+$box-shadow: 0 0.5rem 1rem rgba($black, 0.15) !default;
+$box-shadow-lg: 0 1rem 3rem rgba($black, 0.175) !default;
+$component-active-color: $white !default;
+$component-active-bg: theme-color("primary") !default;
 
 // Typography
 //
 // Font, line-height, and color for body text, headings, and more.
 
 // stylelint-disable value-keyword-case
-$font-family-sans-serif:  "Lato", Helvetica, Arial, sans-serif !default;
-$font-family-serif:       Georgia, "Times New Roman", Times, serif !default;
+$font-family-sans-serif: "Lato", Helvetica, Arial, sans-serif !default;
+$font-family-serif: Georgia, "Times New Roman", Times, serif !default;
+
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
-$font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
-$font-family-base:        $font-family-sans-serif !default;
+$font-family-monospace: Menlo, Monaco, Consolas, "Courier New", monospace !default;
+$font-family-base: $font-family-sans-serif !default;
 // stylelint-enable value-keyword-case
 
-$font-size-base:              1rem * 0.9 !default; // Assumes the browser default, typically `16px`
-$font-size-md:                1rem !default;
-$font-size-lg:                $font-size-base * 1.25 !default;
-$font-size-sm:                $font-size-base * .875 !default;
-
-$font-weight-lighter:         lighter !default;
-$font-weight-light:           300 !default;
-$font-weight-normal:          400 !default;
-$font-weight-bold:            700 !default;
-$font-weight-bolder:          bolder !default;
-
-$font-weight-base:            $font-weight-normal !default;
-$line-height-base:            1.5 !default;
-
-$h1-font-size:                $font-size-base * 2.5 !default;
-$h2-font-size:                $font-size-base * 2 !default;
-$h3-font-size:                $font-size-base * 1.75 !default;
-$h4-font-size:                $font-size-base * 1.5 !default;
-$h5-font-size:                $font-size-base * 1.25 !default;
-$h6-font-size:                $font-size-base !default;
+$font-size-base: 1rem * 0.9 !default; // Assumes the browser default, typically `16px`
+$font-size-md: 1rem !default;
+$font-size-lg: $font-size-base * 1.25 !default;
+$font-size-sm: $font-size-base * 0.875 !default;
+$font-weight-lighter: lighter !default;
+$font-weight-light: 300 !default;
+$font-weight-normal: 400 !default;
+$font-weight-bold: 700 !default;
+$font-weight-bolder: bolder !default;
+$font-weight-base: $font-weight-normal !default;
+$line-height-base: 1.5 !default;
+$h1-font-size: $font-size-base * 2.5 !default;
+$h2-font-size: $font-size-base * 2 !default;
+$h3-font-size: $font-size-base * 1.75 !default;
+$h4-font-size: $font-size-base * 1.5 !default;
+$h5-font-size: $font-size-base * 1.25 !default;
+$h6-font-size: $font-size-base !default;
 
 //custom font size
-$ce-font-size-extra-large:    $font-size-base * 3 !default;
-
-$headings-margin-bottom:      $spacer / 2 !default;
-$headings-font-family:        null !default;
-$headings-font-weight:        500 !default;
-$headings-line-height:        1.2 !default;
-$headings-color:              null !default;
+$ce-font-size-extra-large: $font-size-base * 3 !default;
+$headings-margin-bottom: $spacer / 2 !default;
+$headings-font-family: null !default;
+$headings-font-weight: 500 !default;
+$headings-line-height: 1.2 !default;
+$headings-color: null !default;
 
 // Buttons
 //
 // For each of Bootstrap's buttons, define text, background, and border color.
 
-$btn-font-weight:             $demibold !default;
-$btn-box-shadow:              inset 0 1px 0 rgba($white, .15), 0 1px 1px rgba($black, .075) !default;
-$btn-disabled-opacity:        .65 !default;
-$btn-active-box-shadow:       inset 0 3px 5px rgba($black, .125) !default;
-
-$btn-link-disabled-color:     $gray-600 !default;
-
-$btn-block-spacing-y:         .5rem !default;
+$btn-font-weight: $demibold !default;
+$btn-box-shadow: inset 0 1px 0 rgba($white, 0.15), 0 1px 1px rgba($black, 0.075) !default;
+$btn-disabled-opacity: 0.65 !default;
+$btn-active-box-shadow: inset 0 3px 5px rgba($black, 0.125) !default;
+$btn-link-disabled-color: $gray-600 !default;
+$btn-block-spacing-y: 0.5rem !default;
 
 // Allows for customizing button radius independently from global border radius
-$btn-border-radius:           $border-radius !default;
-$btn-border-radius-lg:        $border-radius-lg !default;
-$btn-border-radius-sm:        $border-radius-sm !default;
-
-$btn-transition:              color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
+$btn-border-radius: $border-radius !default;
+$btn-border-radius-lg: $border-radius-lg !default;
+$btn-border-radius-sm: $border-radius-sm !default;
+$btn-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out !default;
